<resources>
    <string name="app_name">Torrebooks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Name of book or author</string>
    <string name="nav_bookshelf">Bookshelf</string>
    <string name="nav_download">Download Book</string>
    <string name="looking_for_torrents">Looking for torrents...</string>
    <string name="loading_books">Loading Books...</string>
    <string name="permission_denied">Unable To download book permission denied!</string>
    <string name="starting">Starting...</string>
    <string name="error_invalid_password">Invalid Password, must be at least 4 caracters long</string>
    <string name="error_field_required">Field required!</string>
    <string name="error_invalid_email">Invalid Email adresse!</string>
    <string name="no_torrents_found_n_try_manual_search">No Torrents Found!  Try Manual Search</string>
    <string name="book_not_found">Book not found, maybe it has been moved or deleted</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="i_understand">I Agree</string>
    <string name="rate_it">Rate it</string>
    <string name="disclaimer_text">Disclaimer: Please note that this app is made available for informative purposes and strictly for personal, private use for those who can’t afford to buy eBooks only. If you can support the author by any way including buying the book please do, the app does not host or own any of the eBooks all the eBooks are made available through the bitTorrent network.</string>
    <string name="importbooks">Import</string>
    <string name="facebook_app_id">479879885872708</string>
    <string name="fb_login_protocol_scheme">fb479879885872708</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup!</string>
    <string name="or_connect_with">OR CONNECT WITH</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="unable_facebook_login">Unable To login with your facebook account, Please Try with another method of login</string>
    <string name="login_attempt_failed">Login Attempt Failed, Please Check your internet connexion!</string>
    <string name="failed_login_account_credentials">We cant find an account with this credentials. Please make sure you entered the right information</string>
    <string name="acount_creation_failed">Account Creation Failed</string>
    <string name="failed_to_connect_to_our_server">Please Retry, Failed To Connect To Our Servers</string>
    <string name="caracters_min">3 Caracters at least!</string>
    <string name="invalid_email">invalid Email address!</string>
    <string name="short_password">short or empty password 5 caracters at least</string>
    <string name="resume_reading">Resume Reading</string>
    <string name="resume_reading_">This Button allows you to Resume your last Read book</string>
    <string name="showMainMenu">Show main Menu</string>
    <string name="showMenuDesc">From here you can access all the app menus</string>
    <string name="importBooks">Import Books</string>
    <string name="importbooksdesc_">If you already have or previously downloaded ebooks you can import them back from here.</string>
    <string name="searchbooks">Search Book</string>
    <string name="searchbooksdescr">From here you can search the book you want to dowload by title or by author or combined</string>
    <string name="pressagaintoexit">Press Again to Exit</string>
    <string name="book_row_download">Download</string>
</resources>
