<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_books"
            android:title="@string/nav_bookshelf" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/nav_download" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_nav"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rateapp"
                android:icon="@drawable/ic_favorite"
                android:title="@string/rate_it"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>
