<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="@string/importbooks"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_file_import" />

    <item android:id="@+id/search_book_view"
        android:title="@string/search"
        app:iconTint="@color/colorAccent"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:queryHint="@string/search_hint"
        app:defaultQueryHint="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
