<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_torrebooks_b_only" />
        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Torrebooks"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="24sp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:paddingTop="10dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:id="@+id/startline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />
            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:background="@null"
                android:inputType="text"
                android:drawablePadding="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:hint="Email" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />
            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:background="@null"
                android:hint="********"
                android:inputType="textPassword"  />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:theme="@style/PrimaryButton"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <View
                    android:layout_height="1dp"
                    android:background="@color/tagShadowColor"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/or_connect_with" />
                <View
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/tagShadowColor"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|top"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    facebook:com_facebook_login_text="Facebook"
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="11dp"
                    android:paddingBottom="11dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical" />
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="center_vertical|top"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:text="@string/don_t_have_an_account" />
                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:textStyle="bold|italic"
                    android:textColor="@drawable/textview_click_selector"
                    android:padding="5dp"
                    android:text="Signup!" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>